Completed the integration of frontend to the backend
